Add scripted tests for sbt 0.13.8 and 0.13.7